@@ -1,3 +1,9 @@
+2000-08-27  Ulrich Drepper  <drepper@redhat.com>
+
+	* locales/sv_SE: Remove old LC_COLLATE definition.  Use iso14651_t1
+	and customize with several reorder-after statements.
+	Reported by menthos@menthos.com.
+
 2000-08-25  Ulrich Drepper  <drepper@redhat.com>
 
 	* locales/ja_JP: Add new categories with generic information.
