@@ -1,5 +1,13 @@
 2000-08-27  Ulrich Drepper  <drepper@redhat.com>
 
+	* locale/programs/ld-collate.c (insert_weights): Also update
+	backpointer of next element.
+	(collate_read): Allow definition of new collation symbols in stage 2.
+	Symbol after reorder-after can be UCS4 value.
+	Allow reordering of collation symbols and elements.
+	Do not only move reorder entry in new position.  Instead call
+	insert_weight to do this and read the weights.
+
 	* locale/findlocale.c (free_mem): Add cast to avoid warning.
 
 	* intl/dcigettext.c (DCIGETTEXT): Remove _nl_find_language in code
